fix images wrapping

--- a/css/main.css
+++ b/css/main.css
@@ -3,10 +3,6 @@ body {
     width: 70%;
     font-size: 1.5em;
 }
-img {
-    float: right;
-    margin-right: 5px;
-}
 nav ul, footer ul {
     font-family:'Helvetica', 'Arial', 'Sans-Serif';
     padding: 0px;
